Backend: use keycloak instead of Spring Authorization Server Frontend: use env vars