@@ -1,24 +1,9 @@
 package com.excentria_it.wamya.application.service;
 
-import java.time.ZoneOffset;
-import java.time.ZonedDateTime;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Optional;
-
-import javax.transaction.Transactional;
-
-import org.apache.commons.text.StrSubstitutor;
-import org.springframework.context.MessageSource;
-import org.springframework.context.NoSuchMessageException;
-import org.springframework.security.crypto.password.PasswordEncoder;
-
 import com.excentria_it.wamya.application.port.in.CreateUserAccountUseCase;
+import com.excentria_it.wamya.application.port.out.AsynchronousMessagingPort;
 import com.excentria_it.wamya.application.port.out.CreateUserAccountPort;
 import com.excentria_it.wamya.application.port.out.LoadUserAccountPort;
-import com.excentria_it.wamya.application.port.out.AsynchronousMessagingPort;
 import com.excentria_it.wamya.application.port.out.OAuthUserAccountPort;
 import com.excentria_it.wamya.application.props.ServerUrlProperties;
 import com.excentria_it.wamya.application.service.helper.CodeGenerator;
@@ -28,16 +13,19 @@ import com.excentria_it.wamya.common.domain.EmailTemplate;
 import com.excentria_it.wamya.common.domain.SMSMessage;
 import com.excentria_it.wamya.common.domain.SMSTemplate;
 import com.excentria_it.wamya.common.exception.UserAccountAlreadyExistsException;
-import com.excentria_it.wamya.domain.EmailSender;
-import com.excentria_it.wamya.domain.EmailSubject;
-import com.excentria_it.wamya.domain.JwtOAuth2AccessToken;
-import com.excentria_it.wamya.domain.OAuthRole;
-import com.excentria_it.wamya.domain.OAuthUserAccount;
-import com.excentria_it.wamya.domain.UserAccount;
+import com.excentria_it.wamya.domain.*;
 import com.excentria_it.wamya.domain.UserAccount.MobilePhoneNumber;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.text.StrSubstitutor;
+import org.springframework.context.MessageSource;
+import org.springframework.context.NoSuchMessageException;
+import org.springframework.security.crypto.password.PasswordEncoder;
+
+import javax.transaction.Transactional;
+import java.time.ZoneOffset;
+import java.time.ZonedDateTime;
+import java.util.*;
 
 @UseCase
 @RequiredArgsConstructor
@@ -45,136 +33,139 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class UserAccountService implements CreateUserAccountUseCase {
 
-	private final LoadUserAccountPort loadUserAccountPort;
+    private final LoadUserAccountPort loadUserAccountPort;
 
-	private final CreateUserAccountPort createUserAccountPort;
+    private final CreateUserAccountPort createUserAccountPort;
 
-	private final OAuthUserAccountPort oAuthUserAccountPort;
+    private final OAuthUserAccountPort oAuthUserAccountPort;
 
-	private final AsynchronousMessagingPort messagingPort;
+    private final AsynchronousMessagingPort messagingPort;
 
-	private final CodeGenerator codeGenerator;
+    private final CodeGenerator codeGenerator;
 
-	private final PasswordEncoder passwordEncoder;
+    private final PasswordEncoder passwordEncoder;
 
-	private final ServerUrlProperties serverUrlProperties;
+    private final ServerUrlProperties serverUrlProperties;
 
-	private final MessageSource messageSource;
+    private final MessageSource messageSource;
 
-	public static final String EMAIL_VALIDATION_URL_TEMPLATE = "${protocol}://${host}:${port}/accounts/validate?email=${email}&code=${code}";
+    public static final String EMAIL_VALIDATION_URL_TEMPLATE = "${protocol}://${host}:${port}/accounts/validate?email=${email}&code=${code}";
 
-	@Override
-	public JwtOAuth2AccessToken registerUserAccountCreationDemand(CreateUserAccountCommand command, Locale locale) {
+    @Override
+    public OpenIdAuthResponse registerUserAccountCreationDemand(CreateUserAccountCommand command, Locale locale) {
 
-		checkExistingAccount(command);
+        checkExistingAccount(command);
 
-		String mobileNumberValidationCode = codeGenerator.generateNumericCode();
-		String emailValidationCode = codeGenerator.generateUUID();
-		String encodedPassword = passwordEncoder.encode(command.getUserPassword());
+        final String mobileNumberValidationCode = codeGenerator.generateNumericCode();
+        final String emailValidationCode = codeGenerator.generateUUID();
 
-		OAuthUserAccount oauthUserAccount = OAuthUserAccount.builder().firstname(command.getFirstname())
-				.lastname(command.getLastname()).email(command.getEmail())
-				.phoneNumber(command.getIcc() + "_" + command.getMobileNumber()).password(command.getUserPassword())
-				.isAccountNonExpired(true).isAccountNonLocked(true).isCredentialsNonExpired(true).isEnabled(true)
-				.roles(List.of(new OAuthRole(command.getIsTransporter() ? "TRANSPORTER" : "CLIENT"))).build();
+        final OAuthUserAccount oauthUserAccount = OAuthUserAccount.builder().firstName(command.getFirstname())
+                .lastName(command.getLastname()).email(command.getEmail())
+                .username(command.getEmail()).enabled(true)
+                .emailVerified(false)
+                .credentials(Arrays.asList(OAuthUserAccount.Credentials.builder().type("password").value(command.getUserPassword())
+                        .temporary(false).build()))
+                .attributes(Map.of("phoneNumber", command.getIcc() + "_" + command.getMobileNumber()))
 
-		Long oauthId = oAuthUserAccountPort.createOAuthUserAccount(oauthUserAccount);
+                .realmRoles(List.of(command.getIsTransporter() ? "ROLE_TRANSPORTER" : "ROLE_CLIENT")).build();
 
-		UserAccount userAccount = UserAccount.builder().oauthId(oauthId).isTransporter(command.getIsTransporter())
-				.genderId(command.getGenderId()).firstname(command.getFirstname()).lastname(command.getLastname())
-				.dateOfBirth(command.getDateOfBirth()).email(command.getEmail())
-				.emailValidationCode(emailValidationCode).isValidatedEmail(false)
-				.mobilePhoneNumber(new MobilePhoneNumber(command.getIcc(), command.getMobileNumber()))
-				.isValidatedMobileNumber(false).mobileNumberValidationCode(mobileNumberValidationCode)
-				.isValidatedMobileNumber(false).userPassword(encodedPassword)
-				.creationDateTime(ZonedDateTime.now(ZoneOffset.UTC)).receiveNewsletter(command.getReceiveNewsletter())
-				.globalRating(5.0).build();
+        final String oauthId = oAuthUserAccountPort.createOAuthUserAccount(oauthUserAccount);
 
-		createUserAccountPort.createUserAccount(userAccount);
+        final UserAccount userAccount = UserAccount.builder().oauthId(oauthId).isTransporter(command.getIsTransporter())
+                .genderId(command.getGenderId()).firstname(command.getFirstname()).lastname(command.getLastname())
+                .dateOfBirth(command.getDateOfBirth()).email(command.getEmail())
+                .emailValidationCode(emailValidationCode).isValidatedEmail(false)
+                .mobilePhoneNumber(new MobilePhoneNumber(command.getIcc(), command.getMobileNumber()))
+                .mobileNumberValidationCode(mobileNumberValidationCode)
+                .isValidatedMobileNumber(false)
+                .creationDateTime(ZonedDateTime.now(ZoneOffset.UTC))
+                .receiveNewsletter(command.getReceiveNewsletter()).globalRating(5.0).build();
 
-		requestSendingEmailValidationLink(command.getEmail(), emailValidationCode, locale);
+        createUserAccountPort.createUserAccount(userAccount);
 
-		requestSendingSMSValidationCode(userAccount.getMobilePhoneNumber(), mobileNumberValidationCode, locale);
+        requestSendingEmailValidationLink(command.getEmail(), emailValidationCode, locale);
 
-		JwtOAuth2AccessToken accessToken = oAuthUserAccountPort.fetchJwtTokenForUser(command.getEmail(),
-				command.getUserPassword());
+        requestSendingSMSValidationCode(userAccount.getMobilePhoneNumber(), mobileNumberValidationCode, locale);
 
-		return accessToken;
-	}
+        OpenIdAuthResponse accessToken = oAuthUserAccountPort.fetchJwtTokenForUser(command.getEmail(),
+                command.getUserPassword());
 
-	public void checkExistingAccount(CreateUserAccountCommand command) {
+        return accessToken;
+    }
 
-		Optional<UserAccount> userAccountOptional = loadUserAccountPort.loadUserAccountByUsername(command.getEmail());
-		if (userAccountOptional.isPresent()) {
-			throw new UserAccountAlreadyExistsException(
-					String.format("Email already registred for another account %s", command.getEmail()));
-		}
+    public void checkExistingAccount(CreateUserAccountCommand command) {
 
-		userAccountOptional = loadUserAccountPort
-				.loadUserAccountByUsername(command.getIcc() + "_" + command.getMobileNumber());
-		if (userAccountOptional.isPresent()) {
-			throw new UserAccountAlreadyExistsException(
-					String.format("Mobile number already registred for another account %s %s", command.getIcc(),
-							command.getMobileNumber()));
-		}
+        Optional<UserAccount> userAccountOptional = loadUserAccountPort.loadUserAccountByUsername(command.getEmail());
+        if (userAccountOptional.isPresent()) {
+            throw new UserAccountAlreadyExistsException(
+                    String.format("Email already registred for another account %s", command.getEmail()));
+        }
 
-	}
+        userAccountOptional = loadUserAccountPort
+                .loadUserAccountByUsername(command.getIcc() + "_" + command.getMobileNumber());
+        if (userAccountOptional.isPresent()) {
+            throw new UserAccountAlreadyExistsException(
+                    String.format("Mobile number already registred for another account %s %s", command.getIcc(),
+                            command.getMobileNumber()));
+        }
 
-	protected String patchURL(String url, String protocol, String host, String port, String email,
-			String validationCode) {
+    }
 
-		Map<String, String> data = new HashMap<>();
-		data.put("protocol", protocol);
-		data.put("host", host);
-		data.put("port", port);
-		data.put("email", email);
-		data.put("code", validationCode);
-		String validationUrl = StrSubstitutor.replace(url, data);
+    protected String patchURL(String url, String protocol, String host, String port, String email,
+                              String validationCode) {
 
-		return validationUrl;
-	}
+        Map<String, String> data = new HashMap<>();
+        data.put("protocol", protocol);
+        data.put("host", host);
+        data.put("port", port);
+        data.put("email", email);
+        data.put("code", validationCode);
+        String validationUrl = StrSubstitutor.replace(url, data);
 
-	protected boolean requestSendingEmailValidationLink(String email, String validationCode, Locale locale) {
+        return validationUrl;
+    }
 
-		String emailValidationLink = patchURL(EMAIL_VALIDATION_URL_TEMPLATE, serverUrlProperties.getProtocol(),
-				serverUrlProperties.getHost(), serverUrlProperties.getPort(), email, validationCode);
-		Map<String, String> emailTemplateParams = Map.of(EmailTemplate.EMAIL_VALIDATION.getTemplateParams().get(0),
-				emailValidationLink);
+    protected boolean requestSendingEmailValidationLink(String email, String validationCode, Locale locale) {
 
-		try {
+        String emailValidationLink = patchURL(EMAIL_VALIDATION_URL_TEMPLATE, serverUrlProperties.getProtocol(),
+                serverUrlProperties.getHost(), serverUrlProperties.getPort(), email, validationCode);
+        Map<String, String> emailTemplateParams = Map.of(EmailTemplate.EMAIL_VALIDATION.getTemplateParams().get(0),
+                emailValidationLink);
 
-			EmailMessage emailMessage = EmailMessage.builder().from(EmailSender.FRETTO_TEAM).to(email)
-					.subject(messageSource.getMessage(EmailSubject.EMAIL_VALIDATION, null, locale))
-					.template(EmailTemplate.EMAIL_VALIDATION).params(emailTemplateParams).language(locale.getLanguage())
-					.build();
+        try {
 
-			messagingPort.sendEmailMessage(emailMessage);
+            EmailMessage emailMessage = EmailMessage.builder().from(EmailSender.FRETTO_TEAM).to(email)
+                    .subject(messageSource.getMessage(EmailSubject.EMAIL_VALIDATION, null, locale))
+                    .template(EmailTemplate.EMAIL_VALIDATION).params(emailTemplateParams).language(locale.getLanguage())
+                    .build();
 
-		} catch (IllegalArgumentException | NoSuchMessageException e) {
-			log.error("Exception sending EmailMessage:", e);
-			return false;
-		}
+            messagingPort.sendEmailMessage(emailMessage);
 
-		return true;
-	}
+        } catch (IllegalArgumentException | NoSuchMessageException e) {
+            log.error("Exception sending EmailMessage:", e);
+            return false;
+        }
 
-	protected boolean requestSendingSMSValidationCode(MobilePhoneNumber mobileNumber, String validationCode,
-			Locale locale) {
+        return true;
+    }
 
-		Map<String, String> smsTemplateParams = Map.of(SMSTemplate.PHONE_VALIDATION.getTemplateParams().get(0),
-				validationCode);
+    protected boolean requestSendingSMSValidationCode(MobilePhoneNumber mobileNumber, String validationCode,
+                                                      Locale locale) {
 
-		SMSMessage smsMessage = SMSMessage.builder().to(mobileNumber.toCallable())
-				.template(SMSTemplate.PHONE_VALIDATION).params(smsTemplateParams).language(locale.getLanguage())
-				.build();
-		try {
-			messagingPort.sendSMSMessage(smsMessage);
-		} catch (IllegalArgumentException e) {
-			log.error("Exception sending SMSMessage:", e);
-			return false;
-		}
+        Map<String, String> smsTemplateParams = Map.of(SMSTemplate.PHONE_VALIDATION.getTemplateParams().get(0),
+                validationCode);
 
-		return true;
-	}
+        SMSMessage smsMessage = SMSMessage.builder().to(mobileNumber.toCallable())
+                .template(SMSTemplate.PHONE_VALIDATION).params(smsTemplateParams).language(locale.getLanguage())
+                .build();
+        try {
+            messagingPort.sendSMSMessage(smsMessage);
+        } catch (IllegalArgumentException e) {
+            log.error("Exception sending SMSMessage:", e);
+            return false;
+        }
+
+        return true;
+    }
 
 }
